--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1",
     "pug": "2.0.0-beta11",
+    "supervisor": "^0.12.0",
     "yamljs": "^0.3.0"
   }
 }
